--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "path": {
       "bare": "bare-path",
       "default": "path"
+    },
+    "fs/promises": {
+      "bare": "bare-fs/promises",
+      "default": "fs/promises"
     }
   },
   "dependencies": {
