--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
   },
   "scripts": {
     "format": "prettier --write .",
-    "lint": "prettier --check .",
-    "test": "npm run lint"
+    "lint": "prettier --check . && lunte"
   },
   "repository": {
     "type": "git",
@@ -46,6 +45,7 @@
   },
   "homepage": "https://github.com/holepunchto/pear-updater-bootstrap",
   "devDependencies": {
+    "lunte": "^1.0.0",
     "prettier": "^3.6.2",
     "prettier-config-holepunch": "^2.0.0"
   }
