--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hypercore-id-encoding": "^1.2.0",
     "hyperdrive": "^13.0.1",
     "hyperswarm": "^4.7.14",
+    "paparam": "^1.9.1",
     "pear-updater": "^3.0.1"
   },
   "optionalDependencies": {
