--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "corestore": "^7.0.8",
+    "device-file": "^2.2.0",
     "hypercore-id-encoding": "^1.2.0",
     "hyperdrive": "^13.0.1",
     "hyperswarm": "^4.7.14",
